--- a/coc-settings.json
+++ b/coc-settings.json
@@ -7,6 +7,7 @@
     "js",
     "jsx",
     "typescript",
+    "typescriptreact",
     "ts",
     "tsx",
     "c",
@@ -14,7 +15,9 @@
     "python",
     "py",
     "ejs",
-    "json"
+    "json",
+    "php",
+    "xml"
   ],
   "prettier.semi": true,
   "prettier.trailingComma": "all",
