CHORE: remove coc autocomplete langs. Change colorscheme. Add copilot

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -15,9 +15,7 @@
     "python",
     "py",
     "ejs",
-    "json",
-    "php",
-    "xml"
+    "json"
   ],
   "prettier.semi": true,
   "prettier.trailingComma": "all",
